@@ -1,3 +1,13 @@
+2022-07-31  Dirk Eddelbuettel  <edd@debian.org>
+
+	* DESCRIPTION (Version, Date): Roll minor version
+
+	* src/ql/time/calendar.cpp: Update from QuantLib 1.27
+	* src/ql/time/calendar.hpp: Idem
+	* src/ql/time/calendars/australia.cpp: Idem
+	* src/ql/time/calendars/australia.hpp: Idem
+	* src/ql/time/calendars/saudiarabia.cpp: Idem
+
 2022-02-28  Dirk Eddelbuettel  <edd@debian.org>
 
 	* src/dates.cpp (isHoliday): Add missing negation for isBusinessDay
@@ -8,13 +18,13 @@
 
 2022-01-19  Dirk Eddelbuettel  <edd@debian.org>
 
-	* DESCRIPTION (Version, Daye): Roll minor version
+ 	* DESCRIPTION (Version, Date): Roll minor version
 
 	* src/ql/time/calendars/china.cpp: Updated from QuantLib 1.25
 
 2021-12-09  Dirk Eddelbuettel  <edd@debian.org>
 
-	* DESCRIPTION (Version, Daye): Roll minor version
+	* DESCRIPTION (Version, Date): Roll minor version
 
 	* src/ql/time/asx.cpp: Remove file unused by calendaring
 	* src/ql/time/dategenerationrule.cpp: Idem
